test_suite5/ALAN/test_suite/alan-2022-examples/failing/000860_mutation.alan
source cjg begin boolean I, end E; relax end
